# AAE4011-Q3-Vehicle-Detection-25121434D

./: .gitignore  README.md  extract_from_rosbag.py
vehicle_detection/: CMakeLists.txt  package.xml
vehicle_detection/launch/: detector.launch
vehicle_detection/scripts/: vehicle_detector.py
