<?xml version="1.0"?>
<package format="2">
  <name>vehicle_detection</name>
  <version>0.0.1</version>
  <description>ROS vehicle detection with YOLOv8 for AAE4011 Q3</description>
  <maintainer email="25121434D@connect.polyu.hk">Hung Yan Kin Barney</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
